Revision history for Readonly-Values-Months - Months constants

0.02
	Added GitHub Actions

0.01	Tue Jun 24 08:43:00 EDT 2025
	First draft