@@ -2,6 +2,7 @@ Revision history for Readonly-Values-Months - Months constants
 
 0.02
 	Added GitHub Actions
+	Added @month_names and @short_month_names
 
 0.01	Tue Jun 24 08:43:00 EDT 2025
 	First draft
